--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,6 @@ textarea {
 {
  /* background-color: #e8b939;*/
   border-radius: 10px;
-  margin: 0px 10px;
   padding: 0 1%;
   width: 100%;
 }
@@ -128,12 +127,10 @@ textarea {
 #login input,
 #login label
 {
-  margin: 5px 10px;
   padding: 10px 1%;
+  margin: 2px 0px;
   display: inline-block;
   vertical-align: top;
-  width: 45%;
-  outline: 1px solid red;
 }
 
 #login label
@@ -143,27 +140,38 @@ textarea {
   color: #333;
   font-size: 1em;
   font-weight: bold;
+  width: 30%;
+}
+#login input[type="submit"]
+{
+  padding: 15px;
+  background-color: rgba(0,0,0, .5);
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bolder;
+  width: auto;
 }
 
 #login input
 {
   outline: none;
   border: 1px solid #e8b939;
+  width: 60%;
 }
 
+@media all and (max-width: 768px)
+{
+  
+}
 
 @media all and (min-width: 769px)
 {
   .container
   {
     width: 50%;
-    margin: 0px auto;
+    margin: 10px auto;
   }
 
-  /*#login label
-  {
-    width: 40%;
-  }*/
 }
 
 
