--- a/css/main.css
+++ b/css/main.css
@@ -104,11 +104,10 @@ textarea {
 
 .container
 {
-  background-color: #ffc527;
   border-radius: 10px;
 }
 
-.container h1
+.container h2
 {
   text-align: center;
   background-color: rgba(0,0,0,.7);
@@ -116,9 +115,17 @@ textarea {
   margin: 0;
 }
 
+/* style for login form */
+
+#Form-container
+{
+  background-color: #ffc527;
+  transition: all 1s;
+  transform: scale(0);
+}
+
 #login
 {
- /* background-color: #e8b939;*/
   border-radius: 10px;
   padding: 0 1%;
   width: 100%;
@@ -150,6 +157,7 @@ textarea {
   color: #fff;
   font-weight: bolder;
   width: auto;
+  cursor: pointer;
 }
 
 #login input
@@ -158,6 +166,30 @@ textarea {
   border: 1px solid #e8b939;
   width: 60%;
 }
+
+/* style for displaying temperature */
+
+.temp
+{
+  text-align: center;
+  transition: all 1s;
+}
+.temp 
+{
+  padding: 10px;
+  margin: 10px;
+}
+.temp h2
+{
+  padding: 10px;
+  letter-spacing: 1.2px;
+}
+.temp span
+{
+  font-size: 5em;
+}
+
+/* media query section */
 
 @media all and (max-width: 768px)
 {
@@ -173,15 +205,6 @@ textarea {
   }
 
 }
-
-
-
-
-
-
-
-
-
 
 
 
